# dotfiles

./: .gitignore  .kanban.md  Makefile  README.md  aliases  bootstrap.sh  gitconfig  install-vscode-extensions.sh  install.sh  setup.yaml  vscode-extensions.txt  zshrc
bash/: aliases.sh  bashrc.sh  chat.sh  chat_picker.sh  env.sh  functions.sh  wikipedia.sh  youtube.sh
cheatsheets/: kanban.nvim.cheatsheet  nnn.cheatsheet  nvchad.cheatsheet  nvim.cheatsheet  yt-dlp.cheatsheet
etc/: vscode-extensions.txt
git/: gitconfig
modules/: cloud.sh  core.sh  data.sh  desktop.sh  dev.sh  gaming.sh  latex.sh  media.sh  network.sh  reddit.sh  repos.sh  rss.sh  templates.sh  vim.sh  weird-langs.sh
resources/youtube/: README.md  auth.py
templates/: README.md  bootstrap_project.sh
templates/gitignore/: general.gitignore
templates/project_starters/aws-python-project/: pyrightconfig.json
templates/project_starters/aws-python-project/services/service_a/: handler.py
templates/project_starters/fastapi-app/src/app/: main.py
templates/project_starters/fastapi-app/src/app/api/: routes.py
templates/project_starters/fastapi-app/src/app/core/: config.py
templates/project_starters/fastapi-app/src/app/models/: placeholder.py
templates/project_starters/fastapi-app/tests/: test_core.py
templates/project_starters/flask-app/src/app/: __init__.py  main.py
templates/project_starters/flask-app/src/app/blueprints/: health.py
templates/project_starters/flask-app/src/app/static/: styles.css
templates/project_starters/flask-app/src/app/templates/: index.html
templates/project_starters/flask-app/tests/: test_core.py
templates/project_starters/scraper-selenium/src/scraper/: driver.py
templates/project_starters/scraper-undetected/: requirements.txt
templates/project_starters/scraper-undetected/src/scraper/: driver.py  main.py
templates/project_starters/scraper-undetected/src/scraper/common/: __init__.py
templates/pyproject/: pyproject.toml
tools/: mount-nas.sh
vim/: vimrc
vim/nvim/: init.lua  lazy-lock.json
vim/nvim/lua/: chadrc.lua  config.lua  mappings.lua
vim/nvim/lua/configs/: clipboard.lua  conform.lua  telescope_toggle.lua
vim/nvim/lua/configs/lsp/: mason.lua
vim/nvim/lua/custom/: diagnostics.lua  scratch.lua
vim/nvim/lua/nvchad_core/: options.lua
vim/nvim/lua/plugins/: buffers.lua  cmp.lua  code.lua  comment.lua  copilot.lua  dap.lua  git.lua  kanban.lua  linting.lua  navigation.lua  ollama.lua  session.lua  terminal.lua  theme.lua  ui.lua
vim/nvim/lua/themes/: list.lua  picker.lua
vscode/: extensions.txt
